# word2vec

./: .pre-commit-config.yaml  main.py  pyproject.toml
